# OpenEye

./: .gitignore  README.md  pyproject.toml
quest/: pyproject.toml
quest/gui_unit/: app.py  async_json_logger.py  filter.py  mapping_core.py  networking.py
quest/gui_unit/app/: __init__.py  app.py
quest/gui_unit/core/: config.py  filter.py  networking.py
quest/processing_unit/Assets/: CalibDot.prefab  CalibRunner.cs  CalibUI.cs  DotGridCalibrator.cs  ExperimentManager.cs  GazeInputManagerPlane.cs  NeonExperimentManager.cs  NeonGazeInputManagerPlane.cs  New Material.mat  QuadMaterial.mat  RandomSaccadeTargetMover.cs  ReticleFollower.cs  RightHandPinchDetector.cs  TCPClient.cs  TargetBehavior.cs  TargetDot.prefab  TargetSpawner.cs
quest/processing_unit/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
quest/processing_unit/Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
quest/processing_unit/Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset  NeonXR Group.asset
quest/processing_unit/Assets/AddressableAssetsData/AssetGroups/Schemas/: Built In Data_PlayerDataGroupSchema.asset  Default Local Group_BundledAssetGroupSchema.asset  NeonXR Group_BundledAssetGroupSchema.asset  (+2 more)
quest/processing_unit/Assets/PupilLabs/Scenes/: NeonQuestCalib.unity  PL_Calibration.unity  PL_Calibration_OpenCV.unity  PL_HandInteractionExamples.unity
quest/processing_unit/Assets/UI Toolkit/: PanelSettings.asset
quest/processing_unit/ProjectSettings/: EditorBuildSettings.asset  TagManager.asset
(+52 files in other folders)
