[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openeye"
version = "0.1.0"
description = "OpenEye Cross-Device Calibration Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "PySide6"
]

[project.scripts]
openeye-quest-gui = "quest.gui_unit.app.app:main"
openeye-avp-gui = "avp.gui_unit.app.app:main"
openeye-xreal-gui = "xreal.gui_unit.app.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "quest*",
  "avp*",
  "xreal*",
]