[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openeye-quest"
version = "0.1.0"
description = "OpenEye Quest Calibration Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "PySide6"
]

[project.scripts]
openeye-quest-gui = "gui_unit.app.app:main"

[tool.setuptools.packages.find]
where = ["."]